# un-gomoku

./: .gitignore  README.md  biome.json  package.json  tsconfig.json  wrangler.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  ml.yml  pages.yml  worker.yml
apps/server/: README.md  index.test.ts  index.ts  package.json  server.test.ts  server.ts  server.unit.test.ts  worker.test.ts  worker.ts
apps/server/handlers/: game.handler.test.ts  game.handler.ts  index.ts  room.handler.test.ts  room.handler.ts
apps/server/services/: game.service.test.ts  game.service.ts  index.ts  (+2 more)
apps/web/: README.md  components.json  frontend.ts  index.html  index.test.ts  index.ts  package.json  tsconfig.json  vite.config.ts
ml/: README.md  pyproject.toml
ml/configs/: default.yaml  feat-small.yaml  feat.yaml  large-deep.yaml  large.yaml  league.yaml  ownership.yaml  small-deep.yaml  smoke.yaml
ml/src/ungomoku_ml/: __init__.py  agents.py  arena.py  cli.py  config.py  driver.py  encoding.py  encoding_vectors.py  evaluator.py  export_onnx.py  net.py  replay.py  train_loop.py  ts_bridge.py
ml/src/ungomoku_ml/mcts/: __init__.py  ev.py  gumbel.py  node.py
ml/src/ungomoku_ml/rules/: __init__.py  board.py  constants.py  solver.py  tactics.py  turn.py  validation.py  win.py
ml/tests/: test_driver.py  test_encoding.py  test_ev.py  test_export.py  test_mcts.py  test_net.py  test_rules_parity.py  test_solver.py  test_tactics.py
ml/tests/fixtures/: encoding-vectors.json  rule-vectors.json
scripts/: cpu-battle.ts
tools/parity-arena/: package.json
(+153 files in other folders)
