[project]
name = "ungomoku-ml"
version = "0.1.0"
description = "AlphaZero-style training pipeline for the un-gomoku CPU opponent"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "torch>=2.8",
    "onnx>=1.17",
    "onnxscript>=0.2",
    "onnxruntime>=1.20",
    "pyyaml>=6.0",
    "pydantic>=2.9",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

# Dev machine: RTX 5070 Ti (Blackwell) on driver 595.x (CUDA 13.2) -> cu132
# wheels. CI (linux) uses the small CPU wheel.
[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu132", marker = "sys_platform == 'win32'" },
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[project.scripts]
ungomoku-ml = "ungomoku_ml.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ungomoku_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (export, training smoke)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
